# Voice-Agent

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  botvov.ini  docker-compose.yml  main.py  pyproject.toml  settings.yml  test.py  work.duchungtech.com.crt  work.duchungtech.com.key
adaptive-crag/: application.py  server.py
adaptive-crag/lance/rag/vov.lance/_indices/fts/: .managed.json  meta.json
adaptive-crag/lance/rag/vov.lance/_transactions/: 0-27f22728-fc54-49b0-aa90-18c26cead473.txn  1-9a1ccb61-2e57-43a8-92c5-172ff5f13d7b.txn
adaptive-crag/lance/rag/vov.lance/data/: 7e37762f-2dd1-4602-a8c2-b005a125022b.lance
adaptive-crag/lance/rag/vtv.lance/_indices/fts/: .managed.json  meta.json
adaptive-crag/lance/rag/vtv.lance/_transactions/: 0-63b2eac5-f346-4d8f-9da4-76028705246c.txn  1-e3fd855e-450b-457a-b629-0b40ccf13edb.txn
adaptive-crag/lance/rag/vtv.lance/data/: fdbb1f32-ee19-418d-b94e-f9e5846725c4.lance
adaptive-crag/vov/: vov.txt
adaptive-crag/vtv/: vtv.txt
api/: pipeline.py
botvov/: .sqllite.db  __init__.py  assistant.py  chanels_vov.json  debug_server.py  llm_service.py  main.py  main_test.py  models.py  run_burr_UI.sh  settings.yml  stt_service.py  test.py  tts_service.py  utils.py
botvov/commons/: utils.py
botvov/functions/: __init__.py  timer.py
botvov/modules/llm/: run_server.py
botvov/modules/llm/user_io/: WebUI.py
botvov/text2speech/: __init__.py  app.py  setup.py
botvov/tool_calling/: Broadcast.py  Timer.py  VOV.py  VOV_channel.py  Weather.py
botvov/utils/: load_settings.py
configs/: llm.yaml
docker/: Dockerfile  docker-compose.yml
functions/: timer.py  weather.py
installation/: enviroment.yml
scripts/: ct2_converter.sh  init_llm.sh
speech2text/: compose.yaml
src/: run_server.py  settings.yml  test.py
src/functions/: __init__.py  weather.py
src/user_io/: WebUI.py
text2speech/: main.py  models.py  modules.py  requirements.txt  setup.py  text2speech.py
text2speech/configs/text2speech/: phone_set.json
utils/: load_settings.py
