[tool.poetry]
name = "botvov"
version = "0.1.0"
description = "An AI assistant support answer questions and do tasks from user"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.3.1"
qwen-agent = {path = "./Qwen-Agent/", extras = ["gui", "rag", "code-interpreter"], develop = true}
pydantic = "^2.8.2"
flask = "^3.0.3"
requests = "^2.32.3"
soundfile = "0.12.1"
tqdm = "4.66.5"
numpy = "1.26.4"
pybase64 = "1.4.0"
python-dotenv = "1.0.1"
torch = "*"
openai = "1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
