[tool.poetry]
name = "botvov"
version = "0.1.0"
description = "An AI assistant support answer questions and do tasks from user"
authors = ["thetai <thetai2382002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.3.1"
pydantic = "^2.8.2"
flask = "^3.0.3"
requests = "^2.32.3"
soundfile = "0.12.1"
tqdm = "4.66.5"
numpy = "1.26.4"
pybase64 = "1.4.0"
python-dotenv = "1.0.1"
torch = "2.5.1"
openai = "1.52.0"
fastapi = "0.115.5"
websockets = "14.1"
uvicorn = "0.32.0"
python-multipart = "0.0.19"
burr = {version = "*", extras = ["developer","opentelemetry"]}
instructor = "1.7.0"
loguru = "0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
